style: Correct indentation

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --secondary-color: limegreen;
   --font-stack: 'MesloLGM Nerd Font Mono', monospace;
   --mono-font-stack: 'MesloLGM Nerd Font Mono', monospace;
+  --background-color: #1a1a1a;
   margin: 0 auto;
   font-size: calc(10px + 1vmin);
   color: limegreen;
