chore: Clean up template code, update manifest.json

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 * {
-  --secondary-color: limegreen;
+  --secondary-color: #32CD32;
   --font-stack: 'MesloLGM Nerd Font Mono', monospace;
   --mono-font-stack: 'MesloLGM Nerd Font Mono', monospace;
   --background-color: #1a1a1a;
   margin: 0 auto;
   font-size: calc(10px + 1vmin);
-  color: limegreen;
+  color: var(--secondary-color);
 }
 
 h1.title, h1.title * {
